chore(ci): update ci pipeline (#1441)
* Update CI pipeline

* Update node version

* Fix npmrc

* Update karma config

* Fix npmrc

* Work around crypto issue

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,14 +22,14 @@ jobs:
           node-version: 14
 
       - name: Writing .npmrc
-        run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
+        run: printf "registry=https://npm.pkg.github.com/Vonage\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
 
       - name: Install dependencies
         run: yarn install --network-timeout 100000
 
       - run: yarn compile
       - run: tar -zcf /tmp/vivid-env.tar.gz .
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: workspace
           path: /tmp/vivid-env.tar.gz
@@ -55,7 +55,7 @@ jobs:
             host: registry.npmjs.org
     steps:
       - uses: actions/setup-node@v2
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: workspace
           path: /tmp
@@ -88,7 +88,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: workspace
           path: /tmp
