--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -25,7 +25,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      - run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
+      - run: printf "registry=https://npm.pkg.github.com/Vonage\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
       - uses: actions/setup-node@v2
         with:
           node-version: 14
@@ -38,7 +38,7 @@ jobs:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
       - run: tar -zcf /tmp/vivid-env.tar.gz .
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: workspace
           path: /tmp/vivid-env.tar.gz
@@ -80,8 +80,8 @@ jobs:
     steps:
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-      - uses: actions/download-artifact@v2
+          node-version: 18
+      - uses: actions/download-artifact@v4
         with:
           name: workspace
           path: /tmp
@@ -110,15 +110,15 @@ jobs:
     steps:
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-      - uses: actions/download-artifact@v2
+          node-version: 18
+      - uses: actions/download-artifact@v4
         with:
           name: workspace
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
       - run: npm rebuild playwright && yarn playwright install-deps
       - run: yarn ui-tests
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
           name: snapshot
@@ -143,7 +143,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: workspace
           path: /tmp
