--- a/.github/workflows/deploy-showcase-dev-s3.yml
+++ b/.github/workflows/deploy-showcase-dev-s3.yml
@@ -1,5 +1,9 @@
 name: Build & Deploy Showcase (Dev)
 
+permissions:
+  contents: read
+  packages: read
+
 on:
   pull_request:
     types: [closed]
@@ -13,18 +17,16 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_B }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET_B }}
       AWS_DEFAULT_REGION: eu-west-2
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Setup NodeJS 14
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: 14
-
-      - run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
+          registry-url: https://npm.pkg.github.com
 
       - name: Install yarn
         run: npm install -g yarn
@@ -45,6 +47,8 @@ jobs:
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install --network-timeout 100000
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build storybook
         run: yarn storybook:build
