--- a/.github/workflows/deploy-showcase-pr-s3.yml
+++ b/.github/workflows/deploy-showcase-pr-s3.yml
@@ -1,5 +1,9 @@
 name: Build & Deploy Showcase (PR)
 
+permissions:
+  contents: read
+  packages: read
+
 on:
   pull_request:
     types: [opened, synchronize, reopened]
@@ -11,7 +15,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PRS_ACCESS }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PRS_SECRET }}
       AWS_DEFAULT_REGION: us-east-1
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Add PR deploy URL comment
@@ -25,12 +28,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
-
       - name: Setup NodeJS 14
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: 14
+          registry-url: https://npm.pkg.github.com
 
       - name: Install yarn
         run: npm install -g yarn
@@ -51,6 +53,8 @@ jobs:
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install --network-timeout 100000
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build storybook
         run: yarn storybook:build base-url=${{ github.event.number }}
